# magnetic-particles

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: GL.h.B47B2DE4E0EEDC6B.idx  PropIdl.h.E8625E34DA304539.idx  PropIdlBase.h.228992B29BD82E8E.idx  Unknwn.h.A505E510B6ECAB53.idx  Unknwnbase.h.1DA70907B399ED54.idx  Windows.h.2E62141895691411.idx  Xinput.h.547CAEEF2BB58D8A.idx  __clang_cuda_builtin_vars.h.C83AEB54C7E38F4A.idx  __clang_cuda_cmath.h.DB45B5143D4F69F4.idx  __clang_cuda_complex_builtins.h.7E7B00DCD4FD5A49.idx  __clang_cuda_device_functions.h.62A299F5E19A1D84.idx  __clang_cuda_intrinsics.h.C36E56D7621CB86F.idx  __clang_cuda_libdevice_declares.h.4291B9E9D585A794.idx  __clang_cuda_math.h.9DD6D27C2A0463D9.idx  __clang_cuda_math_forward_declares.h.FCD83C6F58270143.idx  __clang_cuda_runtime_wrapper.h.F92C9EA82827F27E.idx  __clang_cuda_texture_intrinsics.h.1F9A7979E35DCF42.idx  __msvc_bit_utils.hpp.913E311580B1329C.idx  __msvc_iter_core.hpp.7EE037E93B8F6B23.idx  __msvc_ostream.hpp.0CC731B17D4DCC06.idx  __msvc_sanitizer_annotate_container.hpp.6F393BF6432F5F9A.idx  __msvc_string_view.hpp.018ECA431FDDF4C7.idx  _fixes.hpp.A64CD101CA4F92CA.idx  (+430 more)
include/: cuda_kernel.cuh  cuda_types.hpp
include/glad/: glad.h
shaders/: frg_grid.sh  frg_sphere.sh  ver_grid.sh  ver_sphere.sh
src/app/: glad.c  main.cpp
src/core/: camera.h  config.h  input_handler.cpp  input_handler.h  shader.cpp  shader.h
src/object/: magneticparticle.cpp  magneticparticle.hpp
src/physics/: physics.cu  physics.cuh
src/render/: render.cpp  render.hpp
src/shapes/: shapes.cpp  shapes.hpp
(+2 files in other folders)
